// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Snapshots renders a large Avatar 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  border: 0;
  border-radius: 100%;
  box-sizing: border-box;
  overflow: hidden;
  background: #e8ebed;
  height: 64px;
  width: 64px;
  cursor: default;
}

.emotion-2 img {
  width: 100%;
  height: 100%;
}

.emotion-2:not([disabled]):focus {
  outline: none;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='touch'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  border: 0;
  border-radius: 100%;
  box-sizing: border-box;
  overflow: hidden;
  background: #e8ebed;
  width: 64px;
  height: 64px;
}

.emotion-1 img {
  width: 100%;
  height: 100%;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: rgba(0,0,0,0.65);
}

.emotion-0:hover .wd-icon-fill {
  fill: rgba(0,0,0,0.65);
}

.emotion-0 .wd-icon-accent {
  fill: rgba(0,0,0,0.65);
}

.emotion-0:hover .wd-icon-accent {
  fill: rgba(0,0,0,0.65);
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 40px;
  height: 40px;
}

<button
  aria-label="Avatar"
  className="emotion-2 emotion-3"
  disabled={true}
  size={64}
>
  <div
    className="emotion-1"
    size={64}
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-user wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M20 20.491a.503.503 0 0 1-.496.505H4.496A.493.493 0 0 1 4 20.49v-1.495C4 16 6.246 13.8 8.756 12.683 7.682 11.675 7 10.174 7 8.5 7 5.462 9.239 3 12 3s5 2.462 5 5.499c0 1.675-.68 3.175-1.755 4.183C17.758 13.797 20 15.995 20 18.996v1.495zM6.083 18.996H18c0-2.996-2.5-4.999-6-4.999s-6 2.003-5.917 5zM12 11.998c1.657 0 3-1.567 3-3.5C15 6.567 13.657 5 12 5S9 6.566 9 8.499c0 1.932 1.343 3.499 3 3.499z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </div>
</button>
`;

exports[`Avatar Snapshots renders a large avatar with a photo 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  border: 0;
  border-radius: 100%;
  box-sizing: border-box;
  overflow: hidden;
  background: #e8ebed;
  height: 64px;
  width: 64px;
  cursor: default;
}

.emotion-0 img {
  width: 100%;
  height: 100%;
}

.emotion-0:not([disabled]):focus {
  outline: none;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

[data-whatinput='mouse'] .emotion-0:focus,
[data-whatinput='touch'] .emotion-0:focus,
[data-whatinput='pointer'] .emotion-0:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

<button
  aria-label="Avatar"
  className="emotion-0 emotion-1"
  disabled={true}
  size={64}
>
  <img
    alt="Avatar"
    src="https://s3-us-west-2.amazonaws.com/design-assets-internal/avatars/lmcneil.png"
  />
</button>
`;

exports[`Avatar Snapshots renders a large, dark Avatar 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  border: 0;
  border-radius: 100%;
  box-sizing: border-box;
  overflow: hidden;
  background: #0875e1;
  height: 64px;
  width: 64px;
  cursor: default;
}

.emotion-2 img {
  width: 100%;
  height: 100%;
}

.emotion-2:not([disabled]):focus {
  outline: none;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='touch'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  border: 0;
  border-radius: 100%;
  box-sizing: border-box;
  overflow: hidden;
  background: #0875e1;
  width: 64px;
  height: 64px;
}

.emotion-1 img {
  width: 100%;
  height: 100%;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-0:hover .wd-icon-fill {
  fill: #ffffff;
}

.emotion-0 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-0:hover .wd-icon-accent {
  fill: #ffffff;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 40px;
  height: 40px;
}

<button
  aria-label="Avatar"
  className="emotion-2 emotion-3"
  disabled={true}
  size={64}
>
  <div
    className="emotion-1"
    size={64}
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-user wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M20 20.491a.503.503 0 0 1-.496.505H4.496A.493.493 0 0 1 4 20.49v-1.495C4 16 6.246 13.8 8.756 12.683 7.682 11.675 7 10.174 7 8.5 7 5.462 9.239 3 12 3s5 2.462 5 5.499c0 1.675-.68 3.175-1.755 4.183C17.758 13.797 20 15.995 20 18.996v1.495zM6.083 18.996H18c0-2.996-2.5-4.999-6-4.999s-6 2.003-5.917 5zM12 11.998c1.657 0 3-1.567 3-3.5C15 6.567 13.657 5 12 5S9 6.566 9 8.499c0 1.932 1.343 3.499 3 3.499z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </div>
</button>
`;

exports[`Avatar Snapshots renders an avatar with a photo 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  border: 0;
  border-radius: 100%;
  box-sizing: border-box;
  overflow: hidden;
  background: #e8ebed;
  height: 32px;
  width: 32px;
  cursor: default;
}

.emotion-0 img {
  width: 100%;
  height: 100%;
}

.emotion-0:not([disabled]):focus {
  outline: none;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

[data-whatinput='mouse'] .emotion-0:focus,
[data-whatinput='touch'] .emotion-0:focus,
[data-whatinput='pointer'] .emotion-0:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

<button
  aria-label="Avatar"
  className="emotion-0 emotion-1"
  disabled={true}
  size={32}
>
  <img
    alt="Avatar"
    src="https://s3-us-west-2.amazonaws.com/design-assets-internal/avatars/lmcneil.png"
  />
</button>
`;

exports[`Avatar Snapshots renders as expected 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  border: 0;
  border-radius: 100%;
  box-sizing: border-box;
  overflow: hidden;
  background: #e8ebed;
  height: 32px;
  width: 32px;
  cursor: default;
}

.emotion-2 img {
  width: 100%;
  height: 100%;
}

.emotion-2:not([disabled]):focus {
  outline: none;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='touch'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  border: 0;
  border-radius: 100%;
  box-sizing: border-box;
  overflow: hidden;
  background: #e8ebed;
  width: 32px;
  height: 32px;
}

.emotion-1 img {
  width: 100%;
  height: 100%;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: rgba(0,0,0,0.65);
}

.emotion-0:hover .wd-icon-fill {
  fill: rgba(0,0,0,0.65);
}

.emotion-0 .wd-icon-accent {
  fill: rgba(0,0,0,0.65);
}

.emotion-0:hover .wd-icon-accent {
  fill: rgba(0,0,0,0.65);
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 20px;
  height: 20px;
}

<button
  aria-label="Avatar"
  className="emotion-2 emotion-3"
  disabled={true}
  size={32}
>
  <div
    className="emotion-1"
    size={32}
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-user wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M20 20.491a.503.503 0 0 1-.496.505H4.496A.493.493 0 0 1 4 20.49v-1.495C4 16 6.246 13.8 8.756 12.683 7.682 11.675 7 10.174 7 8.5 7 5.462 9.239 3 12 3s5 2.462 5 5.499c0 1.675-.68 3.175-1.755 4.183C17.758 13.797 20 15.995 20 18.996v1.495zM6.083 18.996H18c0-2.996-2.5-4.999-6-4.999s-6 2.003-5.917 5zM12 11.998c1.657 0 3-1.567 3-3.5C15 6.567 13.657 5 12 5S9 6.566 9 8.499c0 1.932 1.343 3.499 3 3.499z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </div>
</button>
`;
